# Project-nn

./: .gitignore  README.md  model.py  pyproject.toml
configs/: k1_aug05_config.yaml  k1_aug0_config.yaml  k1_aug1_config.yaml  k1_augment0.yaml  k3_aug05_config.yaml  k3_aug0_config.yaml  k3_aug1_config.yaml  k9_aug05_config.yaml  k9_aug0_config.yaml  k9_aug1_config.yaml  standard_config.yaml  test_config.yaml
dev/: inference.py  train.py  trainer.py
dev/data/: dataloader.py  dataset.py  split.py  transformations.py
dev/model/: model.py
tests/: test_dataset.py  test_kfold.py
